--- a/Text Mining.ipynb
+++ b/Text Mining.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#libraries new change latest\n",
+    "#libraries added new change latest\n",
     "import os\n",
     "import pandas as pd\n",
     "import nltk\n",
